v0.6.2 add first/last/middle names
